27.06.2020
Removed keyboard controls
README update

26.06.2020
Algorithm for automatically choosing best direction
UI adjustments
Icon update