@@ -36,26 +36,5 @@
 				</div>
 			</div>
 		</div>
-
-
-
-		<div id="enterLeaderboardScreen" class="popup">
-			<div class="content">
-				<h2>Congrats!</h2>
-
-				<p>You belong to the ten best!</p>
-				<p>Enter your name to be included into the leaderboard.</p>
-
-				<label for="name">Name: </label>
-				<input id="nameInput" name="name" pattern="[A-Za-z0-9]+" maxlength="30" autocomplete="off" required/>
-
-				<p id="statusIndicator"></p>
-
-				<div>
-					<button class="secondary" onclick="closeLeaderboardScreen();">Dismiss</button>
-					<button onclick="enterLeaderboard();">Enter</button>
-				</div>
-			</div>
-		</div>
 	</body>
 </html>
